Add Keycloak OAuth2 and OIDC security
